--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-	background-image: linear-gradient(#04519b, #044687 60%, #033769);
+	background-image: linear-gradient(#4bc1f7, #00a1ea 60%, #4bc1f7);
 	color: #fff;
 	min-height: 100px;
 	padding-top: 25px;
@@ -14,7 +14,7 @@ header .logo {
 }
 
 .panel-heading {
-	background-image: linear-gradient(#04519b, #044687 60%, #033769);
+	background-image: linear-gradient(#4bc1f7, #00a1ea 60%, #4bc1f7);
 	color: #fff !important;
 }
 
@@ -54,6 +54,18 @@ header .logo {
 	margin-top: -15px;
 	left: -16px;
 	top: 50%;
+}
+
+a.brand {
+	color: #fff;
+	font-size: 3em;
+	font-weight: bold;
+	font-family: fantasy;
+}
+span.brand {
+	color: #1e4c61;
+	font-family: cursive;
+	letter-spacing: 1px;
 }
 
 .post-actions {
@@ -144,12 +156,12 @@ header .logo {
 footer {
 	background: #f4f4f4;
 	height: 90px;
-	color: #04519b;
+	color: #777;
 	font-weight: bold;
 	text-align: center;
 	padding-top: 40px;
 	margin-top: 30px;
-	border-top: 7px solid #04519b;
+	border-top: 7px solid #4bc1f7;
 }
 
 
@@ -158,5 +170,4 @@ footer {
 		padding-top: 40px;
 	}
 }
-
 
